--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -22,7 +22,7 @@
   <link rel="icon" href="{{ `images/favicon.png` | absURL }}" type="image/x-icon">
 
  <!-- Google Tag Manager Code will be inserted here from layouts/partials/gtm.html file -->
- <!-- {{ partial "gtm" . }} -->
+ {{ partial "gtm" . }}
 
   {{ template "_internal/opengraph.html" . }}
   {{ template "_internal/google_analytics.html" . }}
